--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@ Timeframe:
 </div>
 </div>
 
-<div class="fx-box" id="fxContainer">
-  <!-- FX shares will be inserted dynamically -->
-</div>
+<div class="fx-box" id="fxContainer"></div>
 
 <div id="chart"></div>
 
@@ -57,7 +55,7 @@ Timeframe:
 
 <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
 <script>
-const SERVER_URL = "https://b-twap.onrender.com";
+const SERVER_URL = "http://localhost:3000"; // change if deployed
 const FEED_URL = SERVER_URL + "/latest.json";
 const OHLC_URL = SERVER_URL + "/ohlc";
 const updateInterval = 1000;
@@ -79,7 +77,7 @@ let currentCandle = null;
 
 const fxContainer = document.getElementById('fxContainer');
 
-// initialize FX boxes
+// Initialize FX boxes
 function initFXBoxes() {
     fxContainer.innerHTML = '';
     FX_LIST.forEach(ccy=>{
@@ -108,7 +106,7 @@ async function loadHistoricalCandles() {
             low: c.low,
             close: c.close
         }));
-        if(candles.length > MAX_CANDLES) candles = candles.slice(-MAX_CANDLES);
+        if (candles.length > MAX_CANDLES) candles = candles.slice(-MAX_CANDLES);
         currentCandle = candles.length ? {...candles[candles.length-1]} : null;
         candleSeries.setData(candles);
     } catch(e){ console.error("Failed to load historical candles", e);}
@@ -127,7 +125,6 @@ async function updateTWAP() {
         document.getElementById("goldTwap").innerText = d.gold_usd_per_oz_twap.toFixed(2);
         document.getElementById("timestamp").innerText = d.timestamp_utc.replace("T"," ").replace("Z"," UTC");
 
-        // FX contributions (USD per unit)
         if(d.fx_usd_twap) {
             FX_LIST.forEach(ccy=>{
                 const div = document.getElementById('fx_' + ccy);
@@ -136,7 +133,7 @@ async function updateTWAP() {
             });
         }
 
-        // Candle update
+        // Update candle
         const candleTime = getCandleTime(tsUnix, timeframeMin);
         if(!currentCandle || currentCandle.time !== candleTime){
             if(currentCandle) candles.push(currentCandle);
@@ -151,7 +148,7 @@ async function updateTWAP() {
             candleSeries.update(currentCandle);
         }
 
-        // Auto-scale Y-axis based on latest candle
+        // Auto-scale Y-axis
         chart.priceScale('right').applyOptions({ autoScale: true });
 
     } catch(e){ console.error("Feed fetch error", e);}
