--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,164 @@
-<script>
-  // Set your live server URL here, or leave empty for same-origin (local dev)
-  const SERVER_URL = "https://b-twap.onrender.com"; // <- UPDATE this
-  const FEED_URL = SERVER_URL + "/latest.json";
-  const OHLC_URL = SERVER_URL + "/ohlc";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>BRICS Unit Basket v1 – TWAP + Candles</title>
 
-  const updateInterval = 1000;
-  const MAX_CANDLES = 1000;
-  const FX_LIST = ["BRL", "RUB", "INR", "CNY", "ZAR"];
+  <style>
+    body {
+      background: #0b0f14;
+      color: #eaeaea;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .container {
+      max-width: 950px;
+      margin: auto;
+    }
+    h1 {
+      text-align: center;
+      color: #ffd700;
+    }
+    .price-box {
+      background: #151a21;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+    .price-box .price {
+      font-size: 2em;
+      text-align: center;
+      margin: 10px 0;
+      color: #ffd700;
+    }
+    .row {
+      margin: 5px 0;
+      font-size: 1.1em;
+    }
+    #chart {
+      height: 400px;
+      margin-top: 20px;
+      background: #0b0f14;
+      border-radius: 8px;
+    }
+    select {
+      margin-top: 10px;
+      padding: 5px;
+      font-size: 1em;
+    }
+    .fx-row {
+      display: flex;
+      justify-content: space-between;
+      background: #1a1f28;
+      padding: 5px 10px;
+      border-radius: 4px;
+      margin: 2px 0;
+    }
+    .fx-row span {
+      font-weight: bold;
+      color: #ffd700;
+    }
+    .footnote {
+      font-size: 0.85em;
+      color: #aaa;
+      margin-top: 20px;
+      line-height: 1.4;
+    }
+  </style>
+</head>
 
-  // Chart setup (unchanged)
-  const chartContainer = document.getElementById("chart");
-  const chart = LightweightCharts.createChart(chartContainer, {
-    layout: { backgroundColor: "#0b0f14", textColor: "#eaeaea" },
-    grid: { vertLines: { color: "#333" }, horzLines: { color: "#333" } },
-    rightPriceScale: { borderColor: "#555", autoScale: true },
-    timeScale: { borderColor: "#555", timeVisible: true, secondsVisible: true }
-  });
-  const candleSeries = chart.addCandlestickSeries({
-    upColor: "#ffd700", downColor: "#ff4b4b", borderVisible: false, wickColor: "#eee"
-  });
+<body>
+  <div class="container">
+    <h1>BRICS Unit Basket v1 – Live TWAP + Candles</h1>
 
-  // FX display
-  const fxContainer = document.getElementById("fxContainer");
-  FX_LIST.forEach(ccy => {
-    const div = document.createElement("div");
-    div.className = "fx-row";
-    div.id = "fx_" + ccy;
-    div.innerHTML = `<span>${ccy}</span> : <span>…</span> units/USD`;
-    fxContainer.appendChild(div);
-  });
+    <div class="price-box">
+      <div class="price">
+        Reference Price (USD):
+        <strong><span id="unitUsd">…</span></strong>
+      </div>
 
-  let timeframeMin = parseInt(document.getElementById("timeframe").value);
-  let candles = [];
-  let currentCandle = null;
+      <div class="row">Gold TWAP (USD / troy oz): <span id="goldTwap">…</span></div>
+      <div class="row">Unit (grams gold): <span id="unitGold">…</span></div>
+      <div class="row">100 Units (USD): <span id="hundredUsd">…</span></div>
+      <div class="row">Last Update (UTC): <span id="timestamp">…</span></div>
 
-  function getCandleTime(ts, tfMin) {
-    return Math.floor(ts / (tfMin * 60));
-  }
+      <div class="row">
+        Timeframe:
+        <select id="timeframe">
+          <option value="1">1 min</option>
+          <option value="15">15 min</option>
+          <option value="30">30 min</option>
+          <option value="60">1 hour</option>
+          <option value="180">3 hour</option>
+          <option value="1440">1 day</option>
+          <option value="4320">3 day</option>
+          <option value="10080">1 week</option>
+          <option value="43200">1 month</option>
+        </select>
+      </div>
 
-  // Load historical candles from server
-  async function loadHistoricalCandles() {
-    try {
+      <div class="row">
+        <div id="fxContainer"></div>
+      </div>
+    </div>
+
+    <div id="chart"></div>
+
+    <div class="footnote">
+      <b>Methodology:</b>
+      Basket v1 = 40% gold, 12% each BRL/RUB/INR/CNY/ZAR; gold in troy oz;
+      server-side 5-second TWAP; chart updates every second; selectable
+      timeframes; history persisted across reloads; last 1000 candles per
+      timeframe in browser; server provides full historical OHLC.
+    </div>
+  </div>
+
+  <!-- ✅ LOAD CHART LIBRARY FIRST -->
+  <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
+
+  <!-- ✅ THEN YOUR APP LOGIC -->
+  <script>
+    const SERVER_URL = "";
+    const FEED_URL = SERVER_URL + "/latest.json";
+    const OHLC_URL = SERVER_URL + "/ohlc";
+
+    const updateInterval = 1000;
+    const MAX_CANDLES = 1000;
+    const FX_LIST = ["BRL", "RUB", "INR", "CNY", "ZAR"];
+
+    const chartContainer = document.getElementById("chart");
+    const chart = LightweightCharts.createChart(chartContainer, {
+      layout: { backgroundColor: "#0b0f14", textColor: "#eaeaea" },
+      grid: { vertLines: { color: "#333" }, horzLines: { color: "#333" } },
+      rightPriceScale: { borderColor: "#555", autoScale: true },
+      timeScale: { borderColor: "#555", timeVisible: true, secondsVisible: true }
+    });
+
+    const candleSeries = chart.addCandlestickSeries({
+      upColor: "#ffd700",
+      downColor: "#ff4b4b",
+      borderVisible: false,
+      wickColor: "#eee"
+    });
+
+    let timeframeMin = parseInt(document.getElementById("timeframe").value);
+    let candles = [];
+    let currentCandle = null;
+
+    const fxContainer = document.getElementById("fxContainer");
+    FX_LIST.forEach(ccy => {
+      const div = document.createElement("div");
+      div.className = "fx-row";
+      div.id = "fx_" + ccy;
+      div.innerHTML = `<span>${ccy}</span> : <span>…</span> units/USD`;
+      fxContainer.appendChild(div);
+    });
+
+    function getCandleTime(ts, tfMin) {
+      return Math.floor(ts / (tfMin * 60));
+    }
+
+    async function loadHistoricalCandles() {
       const res = await fetch(`${OHLC_URL}?timeframe=${timeframeMin}&limit=${MAX_CANDLES}`);
       const data = await res.json();
 
@@ -52,44 +170,40 @@
         close: c.close
       }));
 
-      currentCandle = candles.length ? { ...candles[candles.length - 1] } : null;
       candleSeries.setData(candles);
-    } catch (e) {
-      console.error("Failed to load historical candles", e);
+      currentCandle = candles[candles.length - 1] || null;
     }
-  }
 
-  // Fetch latest TWAP & update chart
-  async function updateTWAP() {
-    try {
+    async function updateTWAP() {
       const res = await fetch(FEED_URL);
       const d = await res.json();
-      const tsUnix = Math.floor(new Date(d.timestamp_utc).getTime() / 1000);
 
-      // Display values
       document.getElementById("unitUsd").innerText = d.unit_usd.toFixed(2);
       document.getElementById("unitGold").innerText = d.unit_gold_grams.toFixed(6);
-      document.getElementById("hundredUsd").innerText = (d.unit_usd*100).toFixed(2);
+      document.getElementById("hundredUsd").innerText = d.hundred_units_usd.toFixed(2);
       document.getElementById("goldTwap").innerText = d.gold_usd_per_oz_twap.toFixed(2);
-      document.getElementById("timestamp").innerText = d.timestamp_utc.replace("T", " ").replace("Z", " UTC");
+      document.getElementById("timestamp").innerText =
+        d.timestamp_utc.replace("T", " ").replace("Z", " UTC");
 
-      // FX
-      if (d.fx_usd_twap) {
-        FX_LIST.forEach(ccy => {
-          const div = document.getElementById("fx_" + ccy);
-          // d.fx_usd_twap[ccy] = USD per 1 unit of ccy → we want units per USD
-          const unitsPerUSD = 1 / d.fx_usd_twap[ccy];
-          div.querySelector("span:last-child").innerText = unitsPerUSD.toFixed(2);
-        });
-      }
+      FX_LIST.forEach(ccy => {
+        document.querySelector(`#fx_${ccy} span:last-child`).innerText =
+          (1 / d.fx_usd_twap[ccy]).toFixed(2);
+      });
 
-      // Candles
-      const candleTime = getCandleTime(tsUnix, timeframeMin);
+      const ts = Math.floor(Date.now() / 1000);
+      const candleTime = getCandleTime(ts, timeframeMin);
+
       if (!currentCandle || currentCandle.time !== candleTime) {
         if (currentCandle) candles.push(currentCandle);
 
-        currentCandle = { time: candleTime, open: d.unit_usd, high: d.unit_usd, low: d.unit_usd, close: d.unit_usd };
-        if (candles.length > MAX_CANDLES) candles = candles.slice(-MAX_CANDLES);
+        currentCandle = {
+          time: candleTime,
+          open: d.unit_usd,
+          high: d.unit_usd,
+          low: d.unit_usd,
+          close: d.unit_usd
+        };
+
         candleSeries.setData(candles.concat([currentCandle]));
       } else {
         currentCandle.high = Math.max(currentCandle.high, d.unit_usd);
@@ -97,22 +211,20 @@
         currentCandle.close = d.unit_usd;
         candleSeries.update(currentCandle);
       }
-
-    } catch (e) {
-      console.error("Feed fetch error", e);
     }
-  }
 
-  async function init() {
-    await loadHistoricalCandles();
-    await updateTWAP();
-    setInterval(updateTWAP, updateInterval);
-  }
+    async function init() {
+      await loadHistoricalCandles();
+      updateTWAP();
+      setInterval(updateTWAP, updateInterval);
+    }
 
-  init();
-
-  document.getElementById("timeframe").addEventListener("change", () => {
-    timeframeMin = parseInt(document.getElementById("timeframe").value);
     init();
-  });
-</script>
+
+    document.getElementById("timeframe").addEventListener("change", () => {
+      timeframeMin = parseInt(document.getElementById("timeframe").value);
+      init();
+    });
+  </script>
+</body>
+</html>
